:bug: fix: Backend cadastro Frontend login

--- a/ReserveiAPI/appsettings.json
+++ b/ReserveiAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnections": "Host=localhost; Database=ReserveiDB; User Id=postgres; Password=123456;"
+    "DefaultConnection": "Host=localhost; Database=ReserveiDB; User Id=postgres; Password=123456;"
   },
   "Logging": {
     "LogLevel": {
